# stimela-ninja

./: .gitignore  .readthedocs.yaml  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  README.rst  SECURITY.md  design_sandbox.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/scripts/: dosho-watch-fallback.sh  dosho-watch.sh
.github/workflows/: ci.yml  dosho-watch.yml  release.yml
docs/: cli.rst  conf.py  design.rst  index.rst  installation.rst  offloading.rst  quickstart.rst  requirements.txt  security.rst
docs/api/: index.rst
docs/concepts/: backends.rst  cabs.rst  config.rst  loaders.rst  provenance.rst  recipes.rst  sandbox.rst  steps.rst
examples/: example-simulation.py  loop_demo.py  meerkat_simulation.py  ninja_recipe.py  ninja_selfcal.py  offload_demo.py  simms_cli.py  simple_selfcal.py
examples/cultcargo/: README.md  wsclean.yml
examples/cultcargo/genesis/: cult-cargo-base.yml
examples/cultcargo/genesis/wsclean/: wsclean-base.yml
examples/input-dir/: README.md
examples/simms/: README.md
examples/stimela_classic/: README.md
src/shinobi/: __init__.py  cabs.py  cache.py  cli.py  clickutil.py  config.py  dag.py  decorators.py  download.py  exceptions.py  graph.py  logsetup.py  policies.py  provenance.py  recipe.py  resources.py  results.py  sandbox.py  schema.py  wranglers.py
src/shinobi/backends/: __init__.py  _stream.py  container.py  kubernetes.py  native.py  recording.py  slurm.py  slurm_script.py  trace.py  venv.py
src/shinobi/loaders/: __init__.py  _modelgen.py  cultcargo.py  stimela_classic.py  worker_schema.py
src/shinobi/offload/: __init__.py  slurm.py  ssh.py
src/shinobi/steps/: __init__.py  backend.py  decorator.py  dispatch.py  loops.py  pyfunc.py  schema.py
tests/: _venv_pystep_funcs.py  conftest.py  test_backends_stream.py  test_cabs.py  test_cache.py  test_cli.py  test_cli_cabs.py  test_cli_clean.py  test_cli_download.py  test_cli_replay.py  test_clickutil.py  test_config.py  test_container_backend.py  test_cultcargo_loader.py  test_dag.py  test_decorators.py  test_docker_live.py  test_example_simulation.py  test_graph.py  test_kubernetes_backend.py  test_kubernetes_live.py  test_logsetup.py  test_meerkat_simulation_example.py  test_modelgen.py  test_native_backend.py  test_ninja_selfcal.py  test_offload_slurm.py  test_offload_ssh.py  test_policies.py  test_provenance.py  test_recipe.py  test_resources.py  test_sandbox.py  test_schema.py  test_slurm_backend.py  test_slurm_live.py  test_steps_backend.py  test_steps_decorator.py  test_steps_dispatch.py  test_steps_loops.py  (+10 more)
tests/fixtures/: sample_steps.py  sample_targets.py
tests/fixtures/remote_target/: recipe.py  recipe_nested_include.py  recipe_unresolvable.py
tests/fixtures/remote_target/cabs/: nested_include_tool.yml  nested_vars.yml  tool.yml  vars.yml
tests/fixtures/worker_schemas/: caracal_base.yaml  crosscal_schema.yaml  getdata_schema.yaml  obsconf_schema.yaml
tests/slurm_live/: README.md  docker-compose.yml
