[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stimela-ninja"
version = "0.1.0b4"
description = "Stimela 3.0 -- A robust, flexible and simple framework for reproducible radio astronomy pipelines"
readme = "README.rst"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sphesihle Makhathini", email = "sphemakh@gmail.com" },
]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.7",
    "packaging>=23",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
# Not installed by default `uv sync`/`uv run`, and not resolved as a uv
# dependency-group at all: both simms and dosho pin their own `stimela-ninja`
# dependency to a git source (for their own standalone dev loop, since
# stimela-ninja isn't on PyPI yet), which conflicts with resolving
# stimela-ninja's *own* lock as the local editable project -- uv locks all
# dependency-groups together, so any group containing them would break
# `uv lock`/`uv sync` for everyone, not just examples users. Install them
# manually instead, after a normal `uv sync`:
#   uv pip install --no-deps -e ../dosho   # or the git URL
#   uv pip install --no-deps simms @ git+https://github.com/wits-cfa/simms.git
# simms has no docker image yet, so it must be installed to run via
# NativeBackend. dosho (the native shinobi cab repository) supplies that
# example's real wsclean/cubical/simms cabs.

# Documentation build (Sphinx + Furo + autodoc). `uv sync --group docs`.
docs = [
    "sphinx>=7.2",
    "furo>=2024.1",
    "sphinx-copybutton>=0.5",
    "myst-parser>=2.0",
]

[project.urls]
Homepage = "https://github.com/shinobi/stimela-ninja"
Repository = "https://github.com/shinobi-dosho/stimela-ninja"
Documentation = "https://stimela-ninja.readthedocs.io"
Issues = "https://github.com/shinobi-dosho/stimela-ninja/issues"

[project.scripts]
ninja = "shinobi.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/shinobi"]

[tool.hatch.build.targets.sdist]
# Anchor patterns to the repo root (leading "/"); unanchored names match at
# any depth (gitignore semantics) and would drag in nested README/LICENSE files
# from .opencode/node_modules, examples/, tests/, etc.
include = [
    "/src/shinobi",
    "/README.rst",
    "/LICENSE",
    "/AGENTS.md",
    "/CONTRIBUTING.md",
    "/CODE_OF_CONDUCT.md",
    "/SECURITY.md",
    "/CITATION.cff",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# importlib mode + namespace packages lets test modules use relative imports
# (e.g. `from .fixtures...`) without `tests/` being a package (no __init__.py).
addopts = "--import-mode=importlib"
consider_namespace_packages = true

[tool.ruff]
line-length = 180
