[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stimela-ninja"
version = "0.1.0b4"
description = "Stimela 3.0 -- A robust, flexible and simple framework for reproducible radio astronomy pipelines"
readme = "README.rst"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sphesihle Makhathini", email = "sphemakh@gmail.com" },
]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.7",
    "packaging>=23",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
# Not installed by default `uv sync`/`uv run`, and not resolved as a uv
# dependency-group at all: both simms and dosho pin their own `stimela-ninja`
# dependency to a git source (for their own standalone dev loop, since
# stimela-ninja isn't on PyPI yet), which conflicts with resolving
# stimela-ninja's *own* lock as the local editable project -- uv locks all
# dependency-groups together, so any group containing them would break
# `uv lock`/`uv sync` for everyone, not just examples users. Install them
# manually instead, after a normal `uv sync`:
#   uv pip install --no-deps -e ../dosho   # or the git URL
#   uv pip install --no-deps simms @ git+https://github.com/wits-cfa/simms.git
# simms has no docker image yet, so it must be installed to run via
# NativeBackend. dosho (the native shinobi cab repository) supplies that
# example's real wsclean/cubical/simms cabs.

# Documentation build (Sphinx + Furo + autodoc). `uv sync --group docs`.
docs = [
    "sphinx>=7.2",
    "furo>=2024.1",
    "sphinx-copybutton>=0.5",
    "myst-parser>=2.0",
]

[project.urls]
Homepage = "https://github.com/shinobi/stimela-ninja"
Repository = "https://github.com/shinobi-dosho/stimela-ninja"
Documentation = "https://stimela-ninja.readthedocs.io"
Issues = "https://github.com/shinobi-dosho/stimela-ninja/issues"

[project.scripts]
ninja = "shinobi.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/shinobi"]

[tool.hatch.build.targets.sdist]
# Anchor patterns to the repo root (leading "/"); unanchored names match at
# any depth (gitignore semantics) and would drag in nested README/LICENSE files
# from .opencode/node_modules, examples/, tests/, etc.
include = [
    "/src/shinobi",
    "/README.rst",
    "/LICENSE",
    "/AGENTS.md",
    "/CONTRIBUTING.md",
    "/CODE_OF_CONDUCT.md",
    "/SECURITY.md",
    "/CITATION.cff",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# importlib mode + namespace packages lets test modules use relative imports
# (e.g. `from .fixtures...`) without `tests/` being a package (no __init__.py).
addopts = "--import-mode=importlib"
consider_namespace_packages = true

[tool.ruff]
line-length = 180

# Pin the rule set explicitly. Without a `select`, "is this tree lint-clean?"
# is answered by whichever ruff a given machine happens to have installed --
# ruff changes its defaults between releases, so the same commit can be clean
# for one developer and report a hundred violations for another, with no code
# having changed. That makes lint a property of an environment rather than of
# the repo, which is worth exactly nothing as a signal. The list below is a
# decision; extend it deliberately.
#
# Every family here passes on the tree as it stands, so this locks in current
# behaviour rather than declaring a cleanup backlog. It is a strict superset
# of what ruff checked by default before this was pinned (E4/E7/E9 + F).
[tool.ruff.lint]
select = [
    "F",     # pyflakes -- real errors: undefined names, unused imports
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "C4",    # comprehension rewrites
    "DTZ",   # naive datetimes (provenance timestamps must stay tz-aware)
    "ERA",   # commented-out code
    "EXE",   # shebang/executable-bit mismatches
    "FA",    # missing `from __future__ import annotations` -- every module here relies on it
    "FURB",  # modernizations
    "G",     # logging call format (no f-strings in logger.* -- lazy % args)
    "ICN",   # conventional import aliases
    "ISC",   # implicit string concatenation
    "LOG",   # logging misuse
    "PGH",   # blanket `# noqa` / `# type: ignore` without a code
    "Q",     # quote style
    "RSE",   # `raise X()` not `raise X`
    "T10",   # stray debugger imports
    "T20",   # stray `print` (this is a library; output goes through click/logging)
    "TID",   # relative-import hygiene
    "YTT",   # sys.version misuse
]
ignore = [
    # The formatter owns line length. It cannot split long string literals, so
    # E501 only ever fires on lines `ruff format` has already declared final --
    # it would be a permanent 2-violation floor, not a signal.
    "E501",
]

# Families deliberately NOT selected, with the violation count each would add
# today. Each is a real decision to make, not an oversight -- opt one in by
# moving it up and clearing its findings:
#
#   B     9    mostly false positives: 5x B023 where the closure is called
#              inside the same loop iteration, plus B018 in tests where a bare
#              attribute access inside `pytest.raises` is the assertion
#   I     12   import sorting -- all auto-fixable, but a large diff
#   SIM   16   nested `with` merges, mostly in tests
#   UP    46   quoted annotations, `Optional[X]` -> `X | None`
#   RUF   38   incl. unused-`noqa` for rules not selected above
#   PL    235  pylint port; PLW1510 alone is 17 (`subprocess.run` without
#              `check=`, deliberate here -- backends read returncode themselves)
#   ANN   1422 / D 1095 / S 1198  -- annotations, docstring style, bandit;
#              each is a project-wide policy choice, not a cleanup
